fixing educ box spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -832,7 +832,7 @@ ul {
   display: flex;
   flex-direction: row;
   flex-wrap: flex;
-  /* margin-bottom: 30em; */
+  margin-top: 35px;
 }
 
 /*RESPONSIVE*/
@@ -1100,8 +1100,7 @@ ul {
     display: flex;
     flex-direction: column;
     flex-wrap: flex;
-    /* margin-bottom: 30em; */
-    margin-top: 30em;
+    margin-top: 30px;
   }
 
   .owl-dots {
